2010-07-29	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1642/testing
	* psximfs02/init.c, psximfs02/psximfs02.scn,
	psximfs02/psximfs02.doc, psximfs02/Makefile.am: New test added.
	* configure.ac, Makefile.am: Changes to accommodate psximfs02
	test.

2010-07-29	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1633/testing
	* psximfs01/init.c, psximfs01/psximfs01.scn,
	psximfs01/psximfs01.doc: New cases to exercise
	IMFS_memfile_remove.

2010-07-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxobj01/Makefile.am, psxobj01/init.c, psxobj01/psxobj01.scn: Add
	test for runnign out of workspace when setting object name as string.

2010-07-27	Vinu Rajashekhar <vinutheraj@gmail.com>

	PR 1629/cpukit
	* psx04/init.c: sigsuspend() was not completely following the POSIX
	specification.

2010-07-19	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1623/testing
	* psx13/test.c, psx13/psx13.scn: New cases to improve coverage of
	utime() and fpathconf().
	* psxfile01/test.c, psxfile01/psxfile01.scn: New cases to improve
	coverage of rmdir(), unlink(), mknod(), link(), open(), read(),
	write().
	* psxstat/test.c, psxstat/psxstat.scn: New case to improve
	coverage of readlink().

2010-07-17	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1622/testing
	* psxchroot01/test.c, psxchroot01/psxchroot01.scn: Added two test
	cases to completely cover chroot().

2010-07-16	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* psxfile01/test.c: Avoid NULL pointer access.

2010-07-15	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1617/testing
	* psxfile01/test.c, psxfile01/psxfile01.scn: Added new cases to
	exercise_link_r and _unlink_r
	* psxstat/test.c, psxstat/psxstat.scn: Added new cases to exercise
	_lstat_r and _stat_r.
	* psxtime/test.c, psxtime/psxtime.scn: Added new cases to exercise
	_gettimeofday.

2010-07-16	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* psxstat/test.c: Avoid NULL pointer access.

2010-07-12	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1613/testing