@@ -1,3 +1,9 @@
+2010-07-30	Bharath Suri <bharath.s.jois@gmail.com>
+
+	PR 1642/testing
+	* psximfs02/init.c, psximfs02/psximfs02.scn,
+	psximfs02/psximfs02.doc: Added test cases to exercise chmod(),
+	chown() and routines in imfs_debug.c.
 2010-07-29	Bharath Suri <bharath.s.jois@gmail.com>
 
 	PR 1642/testing
